using UnityEngine;

namespace UI.Elements.UIFolderViewer
{
    /// <summary>
    /// Holds the full file path for a folder viewer list item.
    /// </summary>
    public class UIFolderViewerItemData : MonoBehaviour
    {
        public string FullPath { get; set; }
    }
}
